@@ -1,3 +1,7 @@
+2019-03-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Fix handling of configuration keys for "all" and "group" configurations, resolves #92
+
 2019-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Add critical exception to abort step if needed, resolves #83
